# idl

./: CMakeLists.txt  README.md
include/: base.h  datetime.h  intrusiveptr.h  method.h  smartptr.h  thread.h  timer.h
include/common/: declexport.h
src/: CMakeLists.txt
src/Datetime/: datetime.cpp
src/Thread/: thread.cpp  threadimpl.cpp  threadimpl.h
src/Timer/: timer.cpp
src/iIntrusivePtr/: intrusiveptr.cpp
test/: CMakeLists.txt
test/tIdlDatetime_unit/: CMakeLists.txt  main.cpp
test/tIdlIntrusivePtr_unit/: CMakeLists.txt  main.cpp
test/tIdlSmartPtr_unit/: CMakeLists.txt  main.cpp
test/tIdlThread_unit/: CMakeLists.txt  main.cpp
test/tIdlTimer_unit/: CMakeLists.txt  main.cpp
