CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 
PROJECT(tIdlIntrusivePtr_unit)
SET(TARGET_NAME tIdlIntrusivePtr_unit)

INCLUDE_DIRECTORIES(
	$ENV{BOOST_ROOT}
	$ENV{IDL_ROOT}/include
)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})

IF (WIN32)
	IF (MSVC80) # Microsoft Visual C++ 8.0, Visual Studio 2005
		SET(VC_ID "vc80")
	ELSEIF (MSVC90) # Microsoft Visual C++ 9.0, Visual Studio 2008
		SET(VC_ID "vc90")
	ELSEIF (MSVC10) # Microsoft Visual C++ 10.0, Visual Studio 2010
		SET(VC_ID "vc100")
	ELSEIF (MSVC11) # Microsoft Visual C++ 11.0, Visual Studio 2012
		SET(VC_ID "vc110")
	ELSEIF (MSVC12) # Microsoft Visual C++ 12.0, Visual Studio 2013
		SET(VC_ID "vc120")
	ELSEIF (MSVC14) # Microsoft Visual C++ 14.0, Visual Studio 2015
		SET(VC_ID "vc140")
	ELSE ()
		MESSAGE(STATUS "Unsupported MSVC version! Please reference cmake variables.")
		SET(VC_ID "unknown")
	ENDIF ()

	TARGET_LINK_LIBRARIES(${TARGET_NAME} 
		debug $ENV{IDL_ROOT}/debug/lib/idl.lib
		
		optimized $ENV{IDL_ROOT}/release/lib/idl.lib
	)
	
ELSE ()
ENDIF ()


IF (NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE "debug")
ENDIF (NOT CMAKE_BUILD_TYPE)
MESSAGE(STATUS "   ${TARGET_NAME}: ${CMAKE_BUILD_TYPE}" )

# configure output directory
# OUTPUTCONFIG: DEBUG, RELEASE, MINSIZEREL, RELWITHDEBINFO
SET(CMAKE_CONFIGURATION_TYPES DEBUG RELEASE MINSIZEREL RELWITHDEBINFO)
FOREACH( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
	MESSAGE(STATUS "** Configuring ${OUTPUTCONFIG} ...")
	STRING( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
	STRING( TOLOWER ${OUTPUTCONFIG} DIR_NAME )
	set_target_properties( ${TARGET_NAME} PROPERTIES 
		RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} $ENV{IDL_ROOT}/${DIR_NAME}/bin )
	set_target_properties( ${TARGET_NAME} PROPERTIES 
		LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} $ENV{IDL_ROOT}/${DIR_NAME}/lib )
	set_target_properties( ${TARGET_NAME} PROPERTIES 
		ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} $ENV{IDL_ROOT}/${DIR_NAME}/lib )
ENDFOREACH( OUTPUTCONFIG )

MESSAGE(STATUS "")
